// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[` 1`] = `
Object {
  "labware": Object {
    "fixedTrash": Object {
      "slot": "12",
    },
    "somePlateId": Object {
      "slot": "1",
    },
    "tiprack10Id": Object {
      "slot": "2",
    },
    "tiprack300Id": Object {
      "slot": "4",
    },
  },
  "liquidState": Object {
    "additionalEquipment": Object {},
    "labware": Object {
      "fixedTrash": Object {
        "A1": Object {},
      },
      "somePlateId": Object {
        "A1": Object {},
        "A10": Object {},
        "A11": Object {},
        "A12": Object {},
        "A2": Object {},
        "A3": Object {},
        "A4": Object {},
        "A5": Object {},
        "A6": Object {},
        "A7": Object {},
        "A8": Object {},
        "A9": Object {},
        "B1": Object {},
        "B10": Object {},
        "B11": Object {},
        "B12": Object {},
        "B2": Object {},
        "B3": Object {},
        "B4": Object {},
        "B5": Object {},
        "B6": Object {},
        "B7": Object {},
        "B8": Object {},
        "B9": Object {},
        "C1": Object {},
        "C10": Object {},
        "C11": Object {},
        "C12": Object {},
        "C2": Object {},
        "C3": Object {},
        "C4": Object {},
        "C5": Object {},
        "C6": Object {},
        "C7": Object {},
        "C8": Object {},
        "C9": Object {},
        "D1": Object {},
        "D10": Object {},
        "D11": Object {},
        "D12": Object {},
        "D2": Object {},
        "D3": Object {},
        "D4": Object {},
        "D5": Object {},
        "D6": Object {},
        "D7": Object {},
        "D8": Object {},
        "D9": Object {},
        "E1": Object {},
        "E10": Object {},
        "E11": Object {},
        "E12": Object {},
        "E2": Object {},
        "E3": Object {},
        "E4": Object {},
        "E5": Object {},
        "E6": Object {},
        "E7": Object {},
        "E8": Object {},
        "E9": Object {},
        "F1": Object {},
        "F10": Object {},
        "F11": Object {},
        "F12": Object {},
        "F2": Object {},
        "F3": Object {},
        "F4": Object {},
        "F5": Object {},
        "F6": Object {},
        "F7": Object {},
        "F8": Object {},
        "F9": Object {},
        "G1": Object {},
        "G10": Object {},
        "G11": Object {},
        "G12": Object {},
        "G2": Object {},
        "G3": Object {},
        "G4": Object {},
        "G5": Object {},
        "G6": Object {},
        "G7": Object {},
        "G8": Object {},
        "G9": Object {},
        "H1": Object {},
        "H10": Object {},
        "H11": Object {},
        "H12": Object {},
        "H2": Object {},
        "H3": Object {},
        "H4": Object {},
        "H5": Object {},
        "H6": Object {},
        "H7": Object {},
        "H8": Object {},
        "H9": Object {},
      },
      "tiprack10Id": Object {
        "A1": Object {},
        "A10": Object {},
        "A11": Object {},
        "A12": Object {},
        "A2": Object {},
        "A3": Object {},
        "A4": Object {},
        "A5": Object {},
        "A6": Object {},
        "A7": Object {},
        "A8": Object {},
        "A9": Object {},
        "B1": Object {},
        "B10": Object {},
        "B11": Object {},
        "B12": Object {},
        "B2": Object {},
        "B3": Object {},
        "B4": Object {},
        "B5": Object {},
        "B6": Object {},
        "B7": Object {},
        "B8": Object {},
        "B9": Object {},
        "C1": Object {},
        "C10": Object {},
        "C11": Object {},
        "C12": Object {},
        "C2": Object {},
        "C3": Object {},
        "C4": Object {},
        "C5": Object {},
        "C6": Object {},
        "C7": Object {},
        "C8": Object {},
        "C9": Object {},
        "D1": Object {},
        "D10": Object {},
        "D11": Object {},
        "D12": Object {},
        "D2": Object {},
        "D3": Object {},
        "D4": Object {},
        "D5": Object {},
        "D6": Object {},
        "D7": Object {},
        "D8": Object {},
        "D9": Object {},
        "E1": Object {},
        "E10": Object {},
        "E11": Object {},
        "E12": Object {},
        "E2": Object {},
        "E3": Object {},
        "E4": Object {},
        "E5": Object {},
        "E6": Object {},
        "E7": Object {},
        "E8": Object {},
        "E9": Object {},
        "F1": Object {},
        "F10": Object {},
        "F11": Object {},
        "F12": Object {},
        "F2": Object {},
        "F3": Object {},
        "F4": Object {},
        "F5": Object {},
        "F6": Object {},
        "F7": Object {},
        "F8": Object {},
        "F9": Object {},
        "G1": Object {},
        "G10": Object {},
        "G11": Object {},
        "G12": Object {},
        "G2": Object {},
        "G3": Object {},
        "G4": Object {},
        "G5": Object {},
        "G6": Object {},
        "G7": Object {},
        "G8": Object {},
        "G9": Object {},
        "H1": Object {},
        "H10": Object {},
        "H11": Object {},
        "H12": Object {},
        "H2": Object {},
        "H3": Object {},
        "H4": Object {},
        "H5": Object {},
        "H6": Object {},
        "H7": Object {},
        "H8": Object {},
        "H9": Object {},
      },
      "tiprack300Id": Object {
        "A1": Object {},
        "A10": Object {},
        "A11": Object {},
        "A12": Object {},
        "A2": Object {},
        "A3": Object {},
        "A4": Object {},
        "A5": Object {},
        "A6": Object {},
        "A7": Object {},
        "A8": Object {},
        "A9": Object {},
        "B1": Object {},
        "B10": Object {},
        "B11": Object {},
        "B12": Object {},
        "B2": Object {},
        "B3": Object {},
        "B4": Object {},
        "B5": Object {},
        "B6": Object {},
        "B7": Object {},
        "B8": Object {},
        "B9": Object {},
        "C1": Object {},
        "C10": Object {},
        "C11": Object {},
        "C12": Object {},
        "C2": Object {},
        "C3": Object {},
        "C4": Object {},
        "C5": Object {},
        "C6": Object {},
        "C7": Object {},
        "C8": Object {},
        "C9": Object {},
        "D1": Object {},
        "D10": Object {},
        "D11": Object {},
        "D12": Object {},
        "D2": Object {},
        "D3": Object {},
        "D4": Object {},
        "D5": Object {},
        "D6": Object {},
        "D7": Object {},
        "D8": Object {},
        "D9": Object {},
        "E1": Object {},
        "E10": Object {},
        "E11": Object {},
        "E12": Object {},
        "E2": Object {},
        "E3": Object {},
        "E4": Object {},
        "E5": Object {},
        "E6": Object {},
        "E7": Object {},
        "E8": Object {},
        "E9": Object {},
        "F1": Object {},
        "F10": Object {},
        "F11": Object {},
        "F12": Object {},
        "F2": Object {},
        "F3": Object {},
        "F4": Object {},
        "F5": Object {},
        "F6": Object {},
        "F7": Object {},
        "F8": Object {},
        "F9": Object {},
        "G1": Object {},
        "G10": Object {},
        "G11": Object {},
        "G12": Object {},
        "G2": Object {},
        "G3": Object {},
        "G4": Object {},
        "G5": Object {},
        "G6": Object {},
        "G7": Object {},
        "G8": Object {},
        "G9": Object {},
        "H1": Object {},
        "H10": Object {},
        "H11": Object {},
        "H12": Object {},
        "H2": Object {},
        "H3": Object {},
        "H4": Object {},
        "H5": Object {},
        "H6": Object {},
        "H7": Object {},
        "H8": Object {},
        "H9": Object {},
      },
    },
    "pipettes": Object {
      "p10SingleId": Object {
        "0": Object {},
      },
      "p300MultiId": Object {
        "0": Object {},
        "1": Object {},
        "2": Object {},
        "3": Object {},
        "4": Object {},
        "5": Object {},
        "6": Object {},
        "7": Object {},
      },
    },
  },
  "modules": Object {
    "someTempModuleId": Object {
      "moduleState": Object {
        "status": "TEMPERATURE_DEACTIVATED",
        "targetTemperature": null,
        "type": "temperatureModuleType",
      },
      "slot": "3",
    },
  },
  "pipettes": Object {
    "p10SingleId": Object {
      "mount": "left",
    },
    "p300MultiId": Object {
      "mount": "right",
    },
  },
  "tipState": Object {
    "pipettes": Object {
      "p10SingleId": false,
      "p300MultiId": false,
    },
    "tipracks": Object {
      "tiprack10Id": Object {
        "A1": true,
        "A10": true,
        "A11": true,
        "A12": true,
        "A2": true,
        "A3": true,
        "A4": true,
        "A5": true,
        "A6": true,
        "A7": true,
        "A8": true,
        "A9": true,
        "B1": true,
        "B10": true,
        "B11": true,
        "B12": true,
        "B2": true,
        "B3": true,
        "B4": true,
        "B5": true,
        "B6": true,
        "B7": true,
        "B8": true,
        "B9": true,
        "C1": true,
        "C10": true,
        "C11": true,
        "C12": true,
        "C2": true,
        "C3": true,
        "C4": true,
        "C5": true,
        "C6": true,
        "C7": true,
        "C8": true,
        "C9": true,
        "D1": true,
        "D10": true,
        "D11": true,
        "D12": true,
        "D2": true,
        "D3": true,
        "D4": true,
        "D5": true,
        "D6": true,
        "D7": true,
        "D8": true,
        "D9": true,
        "E1": true,
        "E10": true,
        "E11": true,
        "E12": true,
        "E2": true,
        "E3": true,
        "E4": true,
        "E5": true,
        "E6": true,
        "E7": true,
        "E8": true,
        "E9": true,
        "F1": true,
        "F10": true,
        "F11": true,
        "F12": true,
        "F2": true,
        "F3": true,
        "F4": true,
        "F5": true,
        "F6": true,
        "F7": true,
        "F8": true,
        "F9": true,
        "G1": true,
        "G10": true,
        "G11": true,
        "G12": true,
        "G2": true,
        "G3": true,
        "G4": true,
        "G5": true,
        "G6": true,
        "G7": true,
        "G8": true,
        "G9": true,
        "H1": true,
        "H10": true,
        "H11": true,
        "H12": true,
        "H2": true,
        "H3": true,
        "H4": true,
        "H5": true,
        "H6": true,
        "H7": true,
        "H8": true,
        "H9": true,
      },
      "tiprack300Id": Object {
        "A1": true,
        "A10": true,
        "A11": true,
        "A12": true,
        "A2": true,
        "A3": true,
        "A4": true,
        "A5": true,
        "A6": true,
        "A7": true,
        "A8": true,
        "A9": true,
        "B1": true,
        "B10": true,
        "B11": true,
        "B12": true,
        "B2": true,
        "B3": true,
        "B4": true,
        "B5": true,
        "B6": true,
        "B7": true,
        "B8": true,
        "B9": true,
        "C1": true,
        "C10": true,
        "C11": true,
        "C12": true,
        "C2": true,
        "C3": true,
        "C4": true,
        "C5": true,
        "C6": true,
        "C7": true,
        "C8": true,
        "C9": true,
        "D1": true,
        "D10": true,
        "D11": true,
        "D12": true,
        "D2": true,
        "D3": true,
        "D4": true,
        "D5": true,
        "D6": true,
        "D7": true,
        "D8": true,
        "D9": true,
        "E1": true,
        "E10": true,
        "E11": true,
        "E12": true,
        "E2": true,
        "E3": true,
        "E4": true,
        "E5": true,
        "E6": true,
        "E7": true,
        "E8": true,
        "E9": true,
        "F1": true,
        "F10": true,
        "F11": true,
        "F12": true,
        "F2": true,
        "F3": true,
        "F4": true,
        "F5": true,
        "F6": true,
        "F7": true,
        "F8": true,
        "F9": true,
        "G1": true,
        "G10": true,
        "G11": true,
        "G12": true,
        "G2": true,
        "G3": true,
        "G4": true,
        "G5": true,
        "G6": true,
        "G7": true,
        "G8": true,
        "G9": true,
        "H1": true,
        "H10": true,
        "H11": true,
        "H12": true,
        "H2": true,
        "H3": true,
        "H4": true,
        "H5": true,
        "H6": true,
        "H7": true,
        "H8": true,
        "H9": true,
      },
    },
  },
}
`;

exports[`makeInitialRobotState > matches snapshot 1`] = `
{
  "labware": {
    "fixedTrash": {
      "slot": "12",
    },
    "somePlateId": {
      "slot": "1",
    },
    "tiprack10Id": {
      "slot": "2",
    },
    "tiprack300Id": {
      "slot": "4",
    },
  },
  "liquidState": {
    "additionalEquipment": {},
    "labware": {
      "fixedTrash": {
        "A1": {},
      },
      "somePlateId": {
        "A1": {},
        "A10": {},
        "A11": {},
        "A12": {},
        "A2": {},
        "A3": {},
        "A4": {},
        "A5": {},
        "A6": {},
        "A7": {},
        "A8": {},
        "A9": {},
        "B1": {},
        "B10": {},
        "B11": {},
        "B12": {},
        "B2": {},
        "B3": {},
        "B4": {},
        "B5": {},
        "B6": {},
        "B7": {},
        "B8": {},
        "B9": {},
        "C1": {},
        "C10": {},
        "C11": {},
        "C12": {},
        "C2": {},
        "C3": {},
        "C4": {},
        "C5": {},
        "C6": {},
        "C7": {},
        "C8": {},
        "C9": {},
        "D1": {},
        "D10": {},
        "D11": {},
        "D12": {},
        "D2": {},
        "D3": {},
        "D4": {},
        "D5": {},
        "D6": {},
        "D7": {},
        "D8": {},
        "D9": {},
        "E1": {},
        "E10": {},
        "E11": {},
        "E12": {},
        "E2": {},
        "E3": {},
        "E4": {},
        "E5": {},
        "E6": {},
        "E7": {},
        "E8": {},
        "E9": {},
        "F1": {},
        "F10": {},
        "F11": {},
        "F12": {},
        "F2": {},
        "F3": {},
        "F4": {},
        "F5": {},
        "F6": {},
        "F7": {},
        "F8": {},
        "F9": {},
        "G1": {},
        "G10": {},
        "G11": {},
        "G12": {},
        "G2": {},
        "G3": {},
        "G4": {},
        "G5": {},
        "G6": {},
        "G7": {},
        "G8": {},
        "G9": {},
        "H1": {},
        "H10": {},
        "H11": {},
        "H12": {},
        "H2": {},
        "H3": {},
        "H4": {},
        "H5": {},
        "H6": {},
        "H7": {},
        "H8": {},
        "H9": {},
      },
      "tiprack10Id": {
        "A1": {},
        "A10": {},
        "A11": {},
        "A12": {},
        "A2": {},
        "A3": {},
        "A4": {},
        "A5": {},
        "A6": {},
        "A7": {},
        "A8": {},
        "A9": {},
        "B1": {},
        "B10": {},
        "B11": {},
        "B12": {},
        "B2": {},
        "B3": {},
        "B4": {},
        "B5": {},
        "B6": {},
        "B7": {},
        "B8": {},
        "B9": {},
        "C1": {},
        "C10": {},
        "C11": {},
        "C12": {},
        "C2": {},
        "C3": {},
        "C4": {},
        "C5": {},
        "C6": {},
        "C7": {},
        "C8": {},
        "C9": {},
        "D1": {},
        "D10": {},
        "D11": {},
        "D12": {},
        "D2": {},
        "D3": {},
        "D4": {},
        "D5": {},
        "D6": {},
        "D7": {},
        "D8": {},
        "D9": {},
        "E1": {},
        "E10": {},
        "E11": {},
        "E12": {},
        "E2": {},
        "E3": {},
        "E4": {},
        "E5": {},
        "E6": {},
        "E7": {},
        "E8": {},
        "E9": {},
        "F1": {},
        "F10": {},
        "F11": {},
        "F12": {},
        "F2": {},
        "F3": {},
        "F4": {},
        "F5": {},
        "F6": {},
        "F7": {},
        "F8": {},
        "F9": {},
        "G1": {},
        "G10": {},
        "G11": {},
        "G12": {},
        "G2": {},
        "G3": {},
        "G4": {},
        "G5": {},
        "G6": {},
        "G7": {},
        "G8": {},
        "G9": {},
        "H1": {},
        "H10": {},
        "H11": {},
        "H12": {},
        "H2": {},
        "H3": {},
        "H4": {},
        "H5": {},
        "H6": {},
        "H7": {},
        "H8": {},
        "H9": {},
      },
      "tiprack300Id": {
        "A1": {},
        "A10": {},
        "A11": {},
        "A12": {},
        "A2": {},
        "A3": {},
        "A4": {},
        "A5": {},
        "A6": {},
        "A7": {},
        "A8": {},
        "A9": {},
        "B1": {},
        "B10": {},
        "B11": {},
        "B12": {},
        "B2": {},
        "B3": {},
        "B4": {},
        "B5": {},
        "B6": {},
        "B7": {},
        "B8": {},
        "B9": {},
        "C1": {},
        "C10": {},
        "C11": {},
        "C12": {},
        "C2": {},
        "C3": {},
        "C4": {},
        "C5": {},
        "C6": {},
        "C7": {},
        "C8": {},
        "C9": {},
        "D1": {},
        "D10": {},
        "D11": {},
        "D12": {},
        "D2": {},
        "D3": {},
        "D4": {},
        "D5": {},
        "D6": {},
        "D7": {},
        "D8": {},
        "D9": {},
        "E1": {},
        "E10": {},
        "E11": {},
        "E12": {},
        "E2": {},
        "E3": {},
        "E4": {},
        "E5": {},
        "E6": {},
        "E7": {},
        "E8": {},
        "E9": {},
        "F1": {},
        "F10": {},
        "F11": {},
        "F12": {},
        "F2": {},
        "F3": {},
        "F4": {},
        "F5": {},
        "F6": {},
        "F7": {},
        "F8": {},
        "F9": {},
        "G1": {},
        "G10": {},
        "G11": {},
        "G12": {},
        "G2": {},
        "G3": {},
        "G4": {},
        "G5": {},
        "G6": {},
        "G7": {},
        "G8": {},
        "G9": {},
        "H1": {},
        "H10": {},
        "H11": {},
        "H12": {},
        "H2": {},
        "H3": {},
        "H4": {},
        "H5": {},
        "H6": {},
        "H7": {},
        "H8": {},
        "H9": {},
      },
    },
    "pipettes": {
      "p10SingleId": {
        "0": {},
      },
      "p300MultiId": {
        "0": {},
        "1": {},
        "2": {},
        "3": {},
        "4": {},
        "5": {},
        "6": {},
        "7": {},
      },
    },
  },
  "modules": {
    "someTempModuleId": {
      "moduleState": {
        "status": "TEMPERATURE_DEACTIVATED",
        "targetTemperature": null,
        "type": "temperatureModuleType",
      },
      "slot": "3",
    },
  },
  "pipettes": {
    "p10SingleId": {
      "mount": "left",
    },
    "p300MultiId": {
      "mount": "right",
    },
  },
  "tipState": {
    "pipettes": {
      "p10SingleId": false,
      "p300MultiId": false,
    },
    "tipracks": {
      "tiprack10Id": {
        "A1": true,
        "A10": true,
        "A11": true,
        "A12": true,
        "A2": true,
        "A3": true,
        "A4": true,
        "A5": true,
        "A6": true,
        "A7": true,
        "A8": true,
        "A9": true,
        "B1": true,
        "B10": true,
        "B11": true,
        "B12": true,
        "B2": true,
        "B3": true,
        "B4": true,
        "B5": true,
        "B6": true,
        "B7": true,
        "B8": true,
        "B9": true,
        "C1": true,
        "C10": true,
        "C11": true,
        "C12": true,
        "C2": true,
        "C3": true,
        "C4": true,
        "C5": true,
        "C6": true,
        "C7": true,
        "C8": true,
        "C9": true,
        "D1": true,
        "D10": true,
        "D11": true,
        "D12": true,
        "D2": true,
        "D3": true,
        "D4": true,
        "D5": true,
        "D6": true,
        "D7": true,
        "D8": true,
        "D9": true,
        "E1": true,
        "E10": true,
        "E11": true,
        "E12": true,
        "E2": true,
        "E3": true,
        "E4": true,
        "E5": true,
        "E6": true,
        "E7": true,
        "E8": true,
        "E9": true,
        "F1": true,
        "F10": true,
        "F11": true,
        "F12": true,
        "F2": true,
        "F3": true,
        "F4": true,
        "F5": true,
        "F6": true,
        "F7": true,
        "F8": true,
        "F9": true,
        "G1": true,
        "G10": true,
        "G11": true,
        "G12": true,
        "G2": true,
        "G3": true,
        "G4": true,
        "G5": true,
        "G6": true,
        "G7": true,
        "G8": true,
        "G9": true,
        "H1": true,
        "H10": true,
        "H11": true,
        "H12": true,
        "H2": true,
        "H3": true,
        "H4": true,
        "H5": true,
        "H6": true,
        "H7": true,
        "H8": true,
        "H9": true,
      },
      "tiprack300Id": {
        "A1": true,
        "A10": true,
        "A11": true,
        "A12": true,
        "A2": true,
        "A3": true,
        "A4": true,
        "A5": true,
        "A6": true,
        "A7": true,
        "A8": true,
        "A9": true,
        "B1": true,
        "B10": true,
        "B11": true,
        "B12": true,
        "B2": true,
        "B3": true,
        "B4": true,
        "B5": true,
        "B6": true,
        "B7": true,
        "B8": true,
        "B9": true,
        "C1": true,
        "C10": true,
        "C11": true,
        "C12": true,
        "C2": true,
        "C3": true,
        "C4": true,
        "C5": true,
        "C6": true,
        "C7": true,
        "C8": true,
        "C9": true,
        "D1": true,
        "D10": true,
        "D11": true,
        "D12": true,
        "D2": true,
        "D3": true,
        "D4": true,
        "D5": true,
        "D6": true,
        "D7": true,
        "D8": true,
        "D9": true,
        "E1": true,
        "E10": true,
        "E11": true,
        "E12": true,
        "E2": true,
        "E3": true,
        "E4": true,
        "E5": true,
        "E6": true,
        "E7": true,
        "E8": true,
        "E9": true,
        "F1": true,
        "F10": true,
        "F11": true,
        "F12": true,
        "F2": true,
        "F3": true,
        "F4": true,
        "F5": true,
        "F6": true,
        "F7": true,
        "F8": true,
        "F9": true,
        "G1": true,
        "G10": true,
        "G11": true,
        "G12": true,
        "G2": true,
        "G3": true,
        "G4": true,
        "G5": true,
        "G6": true,
        "G7": true,
        "G8": true,
        "G9": true,
        "H1": true,
        "H10": true,
        "H11": true,
        "H12": true,
        "H2": true,
        "H3": true,
        "H4": true,
        "H5": true,
        "H6": true,
        "H7": true,
        "H8": true,
        "H9": true,
      },
    },
  },
}
`;
